<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">迪邦视觉</string>
    <string name="all_images">All pictures</string>
    <string name="all_videos">All videos</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_picker_label">Gallery</string>
    <string name="gallery_label">Gallery</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="gallery_camera_media_bucket_name">Camera media</string>
    <string name="crop_label">Crop picture</string>
    <string name="view_label">View picture</string>
    <string name="preferences_label">Camera settings</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing SD card\u2026</string>
    <string name="wallpaper">Setting wallpaper, please wait\u2026</string>
    <string name="savingImage">Saving picture\u2026</string>
    <string name="runningFaceDetection">Please wait\u2026</string>
    <string name="view">View</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on Maps</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="slide_show">Slideshow</string>
    <string name="multiselect">Multiselect</string>
    <string name="capture_picture">Capture picture</string>
    <string name="capture_video">Capture video</string>
    <string name="crop_save_text">Save</string>
    <string name="crop_discard_text">Discard</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="confirm_delete_message">The picture will be deleted.</string>
    <string name="confirm_delete_video_message">The video will be deleted.</string>
    <string name="confirm_delete_multiple_message">These media files will be deleted.</string>
    <string name="camera_toss">Delete</string>
    <string name="camera_share">Share</string>
    <string name="camera_set">Set as</string>
    <string name="camera_play">Play</string>
    <string name="camera_attach">Attach</string>
    <string name="camera_cancel">Cancel</string>
    <string name="camera_crop">Crop</string>
    <string name="no_way_to_share_image">No application available to share the picture.</string>
    <string name="no_way_to_share_video">No application available to share the video.</string>
    <string name="no_way_to_share">No application available to share the media file(s).</string>
    <string name="video_play">Play</string>
    <string name="camera_pick_wallpaper">Pictures</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="pref_gallery_category">General settings</string>
    <string name="pref_slideshow_category">Slideshow settings</string>
    <string name="pref_gallery_size_title">Display size</string>
    <string name="pref_gallery_size_summary">Select the display size of pictures and videos</string>
    <string name="pref_gallery_size_dialogtitle">Picture size</string>
    <string-array name="pref_gallery_size_choices">
        
        <item>Large</item>
        
        <item>Small</item>
    </string-array>
    <string-array name="pref_gallery_size_values" translatable="false">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="default_value_pref_gallery_size" translatable="false">1</string>
    <string name="pref_gallery_sort_title">Sort order</string>
    <string name="pref_gallery_sort_summary">Select the sort order of pictures and videos</string>
    <string name="pref_gallery_sort_dialogtitle">Picture sort</string>
    <string-array name="pref_gallery_sort_choices">
        
        <item>Newest first</item>
        
        <item>Newest last</item>
    </string-array>
    <string-array name="pref_gallery_sort_values" translatable="false">
        <item>descending</item>
        <item>ascending</item>
    </string-array>
    <string name="default_value_pref_gallery_sort" translatable="false">descending</string>
    <string name="pref_gallery_slideshow_interval_title">Slideshow interval</string>
    <string name="pref_gallery_slideshow_interval_summary">Select how long each slide displays in the show</string>
    <string name="pref_gallery_slideshow_interval_dialogtitle">Slideshow interval</string>
    <string-array name="pref_gallery_slideshow_interval_choices">
        
        <item>2 seconds</item>
        
        <item>3 seconds</item>
        
        <item>4 seconds</item>
    </string-array>
    <string-array name="pref_gallery_slideshow_interval_values" translatable="false">
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
    </string-array>
    <string name="default_value_pref_gallery_slideshow_interval" translatable="false">"2"</string>
    <string name="pref_gallery_slideshow_transition_title">Slideshow transition</string>
    <string name="pref_gallery_slideshow_transition_summary">Select the effect used when moving from one slide to the next</string>
    <string name="pref_gallery_slideshow_transition_dialogtitle">Slideshow transition</string>
    <string-array name="pref_gallery_slideshow_transition_choices">
        
        <item>Fade in &amp; out</item>
        
        <item>Slide left - right</item>
        
        <item>Slide up - down</item>
        
        <item>Random selection</item>
    </string-array>
    <string-array name="pref_gallery_slideshow_transition_values" translatable="false">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"-1"</item>
    </string-array>
    <string name="default_value_pref_gallery_slideshow_transition" translatable="false">"0"</string>
    <string name="pref_gallery_slideshow_repeat_title">Repeat slideshow</string>
    <string name="pref_gallery_slideshow_repeat_summary">Play slideshow more than once</string>
    <string name="pref_gallery_slideshow_shuffle_title">Shuffle slides</string>
    <string name="pref_gallery_slideshow_shuffle_summary">Show pictures in random order</string>
    <string name="camerasettings">Settings</string>
    <string name="image_gallery_NoImageView_text">No media found.</string>
    <string name="pref_gallery_confirm_delete_title">Confirm deletions</string>
    <string name="pref_gallery_confirm_delete_summary">Show confirmation before deleting a picture or video</string>
    <string name="no_location_image">No Location information contained in this image.</string>
    <string name="details_panel_title">Details</string>
    <string name="details_file_size">File size:</string>
    <string name="details_image_resolution">Resolution:</string>
    <string name="details_image_make">Manufacturer:</string>
    <string name="details_image_model">Model:</string>
    <string name="details_image_whitebalance">WhiteBalance:</string>
    <string name="details_image_latitude">GPS Latitude:</string>
    <string name="details_image_longitude">GPS Longitude:</string>
    <string name="details_image_location">Location:</string>
    <string name="details_duration">Duration:</string>
    <string name="details_date_taken">Date taken:</string>
    <string name="details_frame_rate">Frame rate:</string>
    <string name="details_bit_rate">Bit rate:</string>
    <string name="details_codec">Codec:</string>
    <string name="details_format">Format:</string>
    <string name="details_dimension_x"><xliff:g id="width" example="640">%1$d</xliff:g> x <xliff:g id="height" example="480">%2$d</xliff:g></string>
    <string name="details_ms"><xliff:g id="minutes">%1$02d</xliff:g>:<xliff:g id="seconds">%2$02d</xliff:g></string>
    <string name="details_hms"><xliff:g id="hours">%1$d</xliff:g>:<xliff:g id="minutes">%2$02d</xliff:g>:<xliff:g id="seconds">%3$02d</xliff:g></string>
        <string name="details_fps"><xliff:g id="frames" example="30">%1$d</xliff:g> fps</string>
    <string name="details_kbps"><xliff:g id="speed" example="192">%1$d</xliff:g> Kbps</string>
    <string name="details_mbps"><xliff:g id="speed" example="2.3">%1$g</xliff:g> Mbps</string>
    <string name="details_ok">OK</string>
    <string name="context_menu_header">Picture options</string>
    <string name="video_context_menu_header">Video options</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="photos_gallery_title">Gallery</string>
    <string name="pick_photos_gallery_title">Select picture</string>
    <string name="videos_gallery_title">Gallery</string>
    <string name="pick_videos_gallery_title">Select video</string>
    <string name="sendImage">Share picture via</string>
    <string name="setImage">Set picture as</string>
    <string name="sendVideo">Share video via</string>
    <string name="send_media_files">Share media files via</string>
    <string name="movieviewlabel">Movies</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from <xliff:g id="duration" example="5:30">%s</xliff:g> ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="gadget_title">Picture frame</string>
    <string name="file_info_title">File info:</string>
    <string name="video_exceed_mms_limit">The video you recorded is too large to send via MMS. Try recording a shorter length clip.</string>
    <string name="multiselect_share">Share</string>
    <string name="multiselect_delete">Delete</string>
    <string name="multiselect_cancel">Cancel</string>
    <string name="delete_images_message">Deleting images, please wait\u2026</string>
    <string name="updating_from_web">"Updating..."</string>
    <string name="buttonname">ok</string>
    <string name="selfInfo">我的资料</string>
    <string name="home">首页</string>
    <string name="message">信息</string>
    <string name="square">广场</string>
    <string name="more">更多</string>
    <string name="blackList">黑名单</string>
    <string name="fans">粉丝</string>
    <string name="weibo">微博</string>
    <string name="favorite">收藏</string>
    <string name="address">地址：</string>
    <string name="loginName">登录名：</string>
    <string name="unattention">取消关注</string>
    <string name="topic">话题</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="accountManage">帐号管理</string>
    <string name="readMode">浏览模式</string>
    <string name="official">官方微博</string>
    <string name="feedback">意见反馈</string>
    <string name="version">检测新版本</string>
    <string name="comment">评论</string>
    <string name="privateLetter">私信</string>
    <string name="atme">\@我</string>
    <string name="searchWeibo">搜索微博</string>
    <string name="searchPeople">找人</string>
    <string name="edit">编辑</string>
    <string name="updateWeibo">发表新微博</string>
    <string name="send">发送</string>
    <string name="saySth">说点儿什么吧...</string>
    <string name="rt_sametime_comment">同时做为评论发布</string>
    <string name="comment_sametime_update">同时发一条微博</string>
    <string name="redirectWeibo">转发微博</string>
    <string name="commentWeibo">评论微博</string>
    <string name="refresh">刷新</string>
    <string name="attention">关注</string>
    <string name="sina_v">新浪认证：</string>
    <string name="intro">介绍：</string>
    <string name="atelse">\@他</string>
    <string name="sendMsg">发私信</string>
    <string name="addToBlacklist">加入黑名单</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="updateIcon">上传头像</string>
    <string name="nickName">昵称：</string>
</resources>