<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent" android:layout_height="0.0dip"
			android:layout_weight="1.0" />
		<TabWidget android:id="@android:id/tabs" android:visibility="gone"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="0.0" />
		<RadioGroup android:gravity="center_vertical"
			android:layout_gravity="bottom" android:orientation="horizontal"
			android:id="@+id/mainTabs_radioGroup" android:background="@drawable/maintab_toolbar_bg"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<RadioButton android:id="@+id/mainTabs_radio_home" android:text="@string/home"
				android:drawableTop="@drawable/icon_home" 
				style="@style/mainTabs_radio" />
			<RadioButton android:id="@+id/mainTabs_radio_msg" android:text="@string/message"
				android:drawableTop="@drawable/icon_meassage" style="@style/mainTabs_radio" />
			<RadioButton android:id="@+id/mainTabs_radio_selfInfo" android:text="@string/selfInfo"
				android:drawableTop="@drawable/icon_selfinfo" style="@style/mainTabs_radio" />
			<RadioButton android:id="@+id/mainTabs_radio_square" android:text="@string/square"
				android:drawableTop="@drawable/icon_square" style="@style/mainTabs_radio" />
			<RadioButton android:id="@+id/mainTabs_radio_more" android:text="@string/more"
				android:drawableTop="@drawable/icon_more" style="@style/mainTabs_radio" />
		</RadioGroup>

	</LinearLayout>

</TabHost>
