<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center"
		android:background="@drawable/titlebar_bg_nor">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:text="@string/square" android:textSize="18.0sp"
			android:textColor="#FF000000" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center"
		android:orientation="horizontal" android:background="@drawable/search_bg">
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:layout_marginLeft="10.0dp" android:clickable="true"
			android:background="@drawable/search_edit" />
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginRight="10.0dp"
			android:clickable="true" android:focusable="true" android:background="@drawable/search_btn" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:gravity="center" android:clickable="true" android:background="@drawable/search_panel">
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:background="@drawable/search_radio" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/searchWeibo"
				android:textColor="#FF000000" android:textSize="16.0sp" />
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:gravity="center" android:clickable="true" android:background="@drawable/search_panel">
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:background="@drawable/search_radio" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/searchPeople"
				android:textColor="#FF000000" android:textSize="16.0sp" />
		</LinearLayout>
	</LinearLayout>
	<GridView android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_weight="1"
	android:background="#FFFFFFFF">
	</GridView>
</LinearLayout>
